5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1578_1330.log
== SUBMITION (2019-03-18 17:06:47) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.157312
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:08:32) 
-- CODE:
print(250/6, round(41,6)
-- EXECUTION TIME:
0.153115
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:13:03) 
-- CODE:
print("divisão: ", round(250/6)
-- EXECUTION TIME:
0.16748
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:16:48) 
-- CODE:
round(250/6)
-- EXECUTION TIME:
0.164184
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:22:46) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.194079
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
